# DLVHEX-SPARQL

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  configure.scan  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
example/: 2.txt  3.txt  chao-sparql.hex  demo-sparql.hex  falling_reasoning_imporve.hex  smarthome-sparql.hex  sopranocmd_eample.txt  sparql_1.txt  test-po2s.db  test-so2p.db  test-sp2o.db  test.hex  update_test.hex  week.txt
example/demo/: 1.txt  falling_reasoning.hex  smarthome-sparql.hex  update_test.hex
include/: Makefile  Makefile.am  Makefile.in  SparqlAtom.h  SparqlAtom_old.h  SparqlPlugin.h  UpdateAtom.h  config.h  config.h.in  virtuosoConn.h
src/: Makefile  Makefile.am  Makefile.in  SparqlAtom.cpp  SparqlAtom.lo  SparqlAtom_old.cpp  SparqlPlugin.cpp  SparqlPlugin.lo  UpdateAtom.cpp  UpdateAtom.lo  VirtuosoConn.cpp  VirtuosoConn.lo  libdlvhexplugin-sparql.la
src/.deps/: SparqlAtom.Plo  SparqlPlugin.Plo  UpdateAtom.Plo  VirtuosoConn.Plo  sparql.Plo
src/.libs/: libdlvhexplugin-sparql.la  libdlvhexplugin-sparql.lai
